--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,15 +1,53 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@7.3.2/css/flag-icons.min.css" />
-    {% seo %}
-  </head>
-  <body>
-    {% include navigation.html %}
-    {{ content }}
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
-  </body>
+
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
+			crossorigin="anonymous">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@7.3.2/css/flag-icons.min.css" />
+		{% seo %}
+	</head>
+
+	<body>
+		{% include navigation.html %}
+		{{ content }}
+		<div class="container-fluid">
+			<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4
+border-top">
+				<p class="col-md-4 mb-0 text-body-secondary">© 2025 IS-EUD
+				</p>
+				<a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+					<img
+						src="{% link assets/images/logo-sm.svg %}"
+						alt="IS-EUD Logo"
+						height="32">
+				</a>
+				<ul class="nav col-md-4 justify-content-end">
+					{% for navlink in site.data.navigation %}
+						<li class="nav-item">
+							{% if navlink.file %}
+								<a href="{% link {{ navlink.file }} %}" class="nav-link px-2 text-body-secondary">
+									{{ navlink.title }}
+								</a>
+							{% else %}
+								<a class="disabled nav-link px-2 text-body-secondary">
+									{{ navlink.title }}
+								</a>
+							{% endif %}
+						</li>
+					{% endfor %}
+				</ul>
+			</footer>
+		</div>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+			crossorigin="anonymous"></script>
+	</body>
+
 </html>
