--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -10,6 +10,16 @@
 			integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
 			crossorigin="anonymous">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@7.3.2/css/flag-icons.min.css" />
+			<!-- FAVICON -->
+		<link href="{% link assets/images/favicon.png %}" rel="shortcut icon">
+		<link
+			rel="icon"
+			type="image/svg+xml"
+			href="{% link assets/images/logo-sm.svg %}">
+		<link
+			rel="icon"
+			type="image/png"
+			href="{% link assets/images/favicon.png %}">
 		{% seo %}
 	</head>
 
