--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -4,11 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link
-			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
-			rel="stylesheet"
-			integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
-			crossorigin="anonymous">
+		<link href="{% link assets/styles/main.scss %}" rel="stylesheet" >
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@7.3.2/css/flag-icons.min.css" />
 			<!-- FAVICON -->
 		<link href="{% link assets/images/favicon.png %}" rel="shortcut icon">
